tests/scan/fixtures/validation/negative/clean_go_clean-graceful-shutdown/clean-graceful-shutdown.go
// Package clean-graceful-shutdown is a clean Go module.
package clean-graceful-shutdown

func Hello() string { return "hello" }
